# nikolaus

./: 1.txt  11.txt  12.txt  13.txt  14.txt  16.txt  3.txt  4.txt  5.txt  6.txt  7.txt  CMakeLists.txt  README.md  graphics.c  graphics.h  main.c  map_gen.c  map_gen.h  maps.h  scores.c  scores.h  utils.c
maps/raw/: 1.txt  12.txt  13.txt  14.txt  15.txt  4.txt  7.txt  8.txt  9.txt
res/maps/: 10.txt  2.txt  9.txt
src/: 15.txt  8.txt  graphics.c  graphics.h  main.c  map_gen.c  maps.c  maps.h  scores.c  scores.txt  utils.c  utils.h
src/maps/raw/: 10.txt  11.txt  16.txt  2.txt  3.txt  5.txt  6.txt
